[package]
name = "justwebtoken_io"
version = "0.0.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Website about JSON web tokens"
repository = "https://github.com/slowli/justwebtoken.io"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64ct = { version = "1.5.2", features = ["alloc"] }
chrono = { version = "0.4.22", default-features = false, features = ["wasmbind"] }
ed25519-compact = { version = "2.0", default-features = false }
k256 = { version = "0.11", default-features = false }
once_cell = "1.17.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
uuid = "1.2.1"
wasm-bindgen = "0.2.75"
web-sys = { version = "0.3.55", features = ["NodeList"] }
yew = { version = "0.20.0", features = ["csr"] }

# Set up `getrandom` crate to use the host JS CSPRNG.
getrandom = { version = "0.2", features = ["custom"] }

[dependencies.jwt-compact]
version = "0.6.0"
default-features = false
features = ["clock", "ed25519-compact", "with_rsa", "k256"]

[dev-dependencies]
assert_matches = "1.5.0"
const-decoder = "0.3.0"
gloo-timers = { version = "0.2.5", features = ["futures"] }
wasm-bindgen-test = "0.3.28"

[build-dependencies]
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5.8"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true
